nov 06/2019 map assignment

--- a/final map assignment/lab11- code/index.html
+++ b/final map assignment/lab11- code/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>ArrayList</title>
+    <title>Use Map</title>
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
@@ -15,8 +15,7 @@
         let assert = chai.assert;
     </script>
 
-    <script src="fixedArray.js"></script>
-    <script src="arrayList.js"></script>
+    <script src="employee.js"></script>
     <script src="test.js"></script>
 </head>
 
